# web-frontend

./: README.md
contract/: Cargo.toml  README.md  build-wasm.sh
contract/src/: lib.rs
web/: .babelrc  .gitignore  README.md  next.config.js  tsconfig.json
web/src/pages/: _app.tsx  index.tsx
