[package]
name = "contract"
version = "0.1.0"
authors = ["kleeMug <theoremOfBeleth@gmail.com>"]
edition = "2018"
  
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"